<?xml version="1.0"?>
<package format="2">
  <name>surveyor</name>
  <version>0.0.0</version>
  <description>The surveyor package</description>

  <maintainer email="WilliamSpies2018@u.northwestern.edu">wspies</maintainer>

  <license>TBD</license>

  <!-- url type="website">https://github.com/spieswl/container-manipulator_baxter</url -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_publisher</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export></export>
</package>
